--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "dotenv": "^8.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-hook-form": "^3.29.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1"
+    "react-scripts": "^4.0.1"
   },
   "scripts": {
-    "storybook": "start-storybook -p 6006 -c ./.storybook",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -31,7 +32,11 @@
   ],
   "devDependencies": {
     "@bahmutov/print-env": "1.2.0",
-    "@storybook/addon-actions": "^6.1.19",
-    "@storybook/react": "^6.1.19"
+    "@storybook/addon-actions": "^6.2.7",
+    "@storybook/addon-links": "^6.2.7",
+    "@storybook/node-logger": "^6.2.7",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.2.7",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24"
   }
 }
